Add parcel service integration and fix depracated code
